parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SEMICOLON

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list_opt
Rule 2     statement_list_opt -> statement_list
Rule 3     statement_list_opt -> empty
Rule 4     statement_list -> statement_list statement
Rule 5     statement_list -> statement
Rule 6     statement -> assignment
Rule 7     statement -> print_stmt
Rule 8     statement -> if_stmt
Rule 9     statement -> while_stmt
Rule 10    statement -> for_stmt
Rule 11    statement -> COMMENT
Rule 12    assignment -> IDENTIFIER EQUALS expression
Rule 13    print_stmt -> PRINT LPAREN expression RPAREN
Rule 14    if_stmt -> IF expression BLOCK_START statement_list_opt BLOCK_END elif_list else_part
Rule 15    elif_list -> empty
Rule 16    elif_list -> ELSEIF expression BLOCK_START statement_list_opt BLOCK_END
Rule 17    elif_list -> elif_list ELSEIF expression BLOCK_START statement_list_opt BLOCK_END
Rule 18    else_part -> empty
Rule 19    else_part -> ELSE BLOCK_START statement_list_opt BLOCK_END
Rule 20    while_stmt -> WHILE expression BLOCK_START statement_list_opt BLOCK_END
Rule 21    for_stmt -> FOR IDENTIFIER IN RANGE LPAREN NUMBER RPAREN BLOCK_START statement_list_opt BLOCK_END
Rule 22    expression -> expression PLUS expression
Rule 23    expression -> expression MINUS expression
Rule 24    expression -> expression TIMES expression
Rule 25    expression -> expression DIVIDE expression
Rule 26    expression -> expression EQ expression
Rule 27    expression -> expression NEQ expression
Rule 28    expression -> expression LT expression
Rule 29    expression -> expression LEQ expression
Rule 30    expression -> expression GT expression
Rule 31    expression -> expression GEQ expression
Rule 32    expression -> MINUS expression
Rule 33    expression -> LPAREN expression RPAREN
Rule 34    expression -> NUMBER
Rule 35    expression -> BOOLEAN
Rule 36    expression -> NULL
Rule 37    expression -> STRING
Rule 38    expression -> IDENTIFIER
Rule 39    empty -> <empty>

Terminals, with rules where they appear

BLOCK_END            : 14 16 17 19 20 21
BLOCK_START          : 14 16 17 19 20 21
BOOLEAN              : 35
COMMENT              : 11
DIVIDE               : 25
ELSE                 : 19
ELSEIF               : 16 17
EQ                   : 26
EQUALS               : 12
FOR                  : 21
GEQ                  : 31
GT                   : 30
IDENTIFIER           : 12 21 38
IF                   : 14
IN                   : 21
LEQ                  : 29
LPAREN               : 13 21 33
LT                   : 28
MINUS                : 23 32
NEQ                  : 27
NULL                 : 36
NUMBER               : 21 34
PLUS                 : 22
PRINT                : 13
RANGE                : 21
RPAREN               : 13 21 33
SEMICOLON            : 
STRING               : 37
TIMES                : 24
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

assignment           : 6
elif_list            : 14 17
else_part            : 14
empty                : 3 15 18
expression           : 12 13 14 16 17 20 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33
for_stmt             : 10
if_stmt              : 8
print_stmt           : 7
program              : 0
statement            : 4 5
statement_list       : 2 4
statement_list_opt   : 1 14 16 17 19 20 21
while_stmt           : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list_opt
    (2) statement_list_opt -> . statement_list
    (3) statement_list_opt -> . empty
    (4) statement_list -> . statement_list statement
    (5) statement_list -> . statement
    (39) empty -> .
    (6) statement -> . assignment
    (7) statement -> . print_stmt
    (8) statement -> . if_stmt
    (9) statement -> . while_stmt
    (10) statement -> . for_stmt
    (11) statement -> . COMMENT
    (12) assignment -> . IDENTIFIER EQUALS expression
    (13) print_stmt -> . PRINT LPAREN expression RPAREN
    (14) if_stmt -> . IF expression BLOCK_START statement_list_opt BLOCK_END elif_list else_part
    (20) while_stmt -> . WHILE expression BLOCK_START statement_list_opt BLOCK_END
    (21) for_stmt -> . FOR IDENTIFIER IN RANGE LPAREN NUMBER RPAREN BLOCK_START statement_list_opt BLOCK_END

    $end            reduce using rule 39 (empty -> .)
    COMMENT         shift and go to state 11
    IDENTIFIER      shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16

    program                        shift and go to state 1
    statement_list_opt             shift and go to state 2
    statement_list                 shift and go to state 3
    empty                          shift and go to state 4
    statement                      shift and go to state 5
    assignment                     shift and go to state 6
    print_stmt                     shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    for_stmt                       shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list_opt .

    $end            reduce using rule 1 (program -> statement_list_opt .)


state 3

    (2) statement_list_opt -> statement_list .
    (4) statement_list -> statement_list . statement
    (6) statement -> . assignment
    (7) statement -> . print_stmt
    (8) statement -> . if_stmt
    (9) statement -> . while_stmt
    (10) statement -> . for_stmt
    (11) statement -> . COMMENT
    (12) assignment -> . IDENTIFIER EQUALS expression
    (13) print_stmt -> . PRINT LPAREN expression RPAREN
    (14) if_stmt -> . IF expression BLOCK_START statement_list_opt BLOCK_END elif_list else_part
    (20) while_stmt -> . WHILE expression BLOCK_START statement_list_opt BLOCK_END
    (21) for_stmt -> . FOR IDENTIFIER IN RANGE LPAREN NUMBER RPAREN BLOCK_START statement_list_opt BLOCK_END

    $end            reduce using rule 2 (statement_list_opt -> statement_list .)
    BLOCK_END       reduce using rule 2 (statement_list_opt -> statement_list .)
    COMMENT         shift and go to state 11
    IDENTIFIER      shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16

    statement                      shift and go to state 17
    assignment                     shift and go to state 6
    print_stmt                     shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    for_stmt                       shift and go to state 10

state 4

    (3) statement_list_opt -> empty .

    $end            reduce using rule 3 (statement_list_opt -> empty .)
    BLOCK_END       reduce using rule 3 (statement_list_opt -> empty .)


state 5

    (5) statement_list -> statement .

    COMMENT         reduce using rule 5 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 5 (statement_list -> statement .)
    PRINT           reduce using rule 5 (statement_list -> statement .)
    IF              reduce using rule 5 (statement_list -> statement .)
    WHILE           reduce using rule 5 (statement_list -> statement .)
    FOR             reduce using rule 5 (statement_list -> statement .)
    $end            reduce using rule 5 (statement_list -> statement .)
    BLOCK_END       reduce using rule 5 (statement_list -> statement .)


state 6

    (6) statement -> assignment .

    COMMENT         reduce using rule 6 (statement -> assignment .)
    IDENTIFIER      reduce using rule 6 (statement -> assignment .)
    PRINT           reduce using rule 6 (statement -> assignment .)
    IF              reduce using rule 6 (statement -> assignment .)
    WHILE           reduce using rule 6 (statement -> assignment .)
    FOR             reduce using rule 6 (statement -> assignment .)
    $end            reduce using rule 6 (statement -> assignment .)
    BLOCK_END       reduce using rule 6 (statement -> assignment .)


state 7

    (7) statement -> print_stmt .

    COMMENT         reduce using rule 7 (statement -> print_stmt .)
    IDENTIFIER      reduce using rule 7 (statement -> print_stmt .)
    PRINT           reduce using rule 7 (statement -> print_stmt .)
    IF              reduce using rule 7 (statement -> print_stmt .)
    WHILE           reduce using rule 7 (statement -> print_stmt .)
    FOR             reduce using rule 7 (statement -> print_stmt .)
    $end            reduce using rule 7 (statement -> print_stmt .)
    BLOCK_END       reduce using rule 7 (statement -> print_stmt .)


state 8

    (8) statement -> if_stmt .

    COMMENT         reduce using rule 8 (statement -> if_stmt .)
    IDENTIFIER      reduce using rule 8 (statement -> if_stmt .)
    PRINT           reduce using rule 8 (statement -> if_stmt .)
    IF              reduce using rule 8 (statement -> if_stmt .)
    WHILE           reduce using rule 8 (statement -> if_stmt .)
    FOR             reduce using rule 8 (statement -> if_stmt .)
    $end            reduce using rule 8 (statement -> if_stmt .)
    BLOCK_END       reduce using rule 8 (statement -> if_stmt .)


state 9

    (9) statement -> while_stmt .

    COMMENT         reduce using rule 9 (statement -> while_stmt .)
    IDENTIFIER      reduce using rule 9 (statement -> while_stmt .)
    PRINT           reduce using rule 9 (statement -> while_stmt .)
    IF              reduce using rule 9 (statement -> while_stmt .)
    WHILE           reduce using rule 9 (statement -> while_stmt .)
    FOR             reduce using rule 9 (statement -> while_stmt .)
    $end            reduce using rule 9 (statement -> while_stmt .)
    BLOCK_END       reduce using rule 9 (statement -> while_stmt .)


state 10

    (10) statement -> for_stmt .

    COMMENT         reduce using rule 10 (statement -> for_stmt .)
    IDENTIFIER      reduce using rule 10 (statement -> for_stmt .)
    PRINT           reduce using rule 10 (statement -> for_stmt .)
    IF              reduce using rule 10 (statement -> for_stmt .)
    WHILE           reduce using rule 10 (statement -> for_stmt .)
    FOR             reduce using rule 10 (statement -> for_stmt .)
    $end            reduce using rule 10 (statement -> for_stmt .)
    BLOCK_END       reduce using rule 10 (statement -> for_stmt .)


state 11

    (11) statement -> COMMENT .

    COMMENT         reduce using rule 11 (statement -> COMMENT .)
    IDENTIFIER      reduce using rule 11 (statement -> COMMENT .)
    PRINT           reduce using rule 11 (statement -> COMMENT .)
    IF              reduce using rule 11 (statement -> COMMENT .)
    WHILE           reduce using rule 11 (statement -> COMMENT .)
    FOR             reduce using rule 11 (statement -> COMMENT .)
    $end            reduce using rule 11 (statement -> COMMENT .)
    BLOCK_END       reduce using rule 11 (statement -> COMMENT .)


state 12

    (12) assignment -> IDENTIFIER . EQUALS expression

    EQUALS          shift and go to state 18


state 13

    (13) print_stmt -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 19


state 14

    (14) if_stmt -> IF . expression BLOCK_START statement_list_opt BLOCK_END elif_list else_part
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NEQ expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GEQ expression
    (32) expression -> . MINUS expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . BOOLEAN
    (36) expression -> . NULL
    (37) expression -> . STRING
    (38) expression -> . IDENTIFIER

    MINUS           shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    BOOLEAN         shift and go to state 24
    NULL            shift and go to state 25
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 20

state 15

    (20) while_stmt -> WHILE . expression BLOCK_START statement_list_opt BLOCK_END
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NEQ expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GEQ expression
    (32) expression -> . MINUS expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . BOOLEAN
    (36) expression -> . NULL
    (37) expression -> . STRING
    (38) expression -> . IDENTIFIER

    MINUS           shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    BOOLEAN         shift and go to state 24
    NULL            shift and go to state 25
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 28

state 16

    (21) for_stmt -> FOR . IDENTIFIER IN RANGE LPAREN NUMBER RPAREN BLOCK_START statement_list_opt BLOCK_END

    IDENTIFIER      shift and go to state 29


state 17

    (4) statement_list -> statement_list statement .

    COMMENT         reduce using rule 4 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 4 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 4 (statement_list -> statement_list statement .)
    IF              reduce using rule 4 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 4 (statement_list -> statement_list statement .)
    FOR             reduce using rule 4 (statement_list -> statement_list statement .)
    $end            reduce using rule 4 (statement_list -> statement_list statement .)
    BLOCK_END       reduce using rule 4 (statement_list -> statement_list statement .)


state 18

    (12) assignment -> IDENTIFIER EQUALS . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NEQ expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GEQ expression
    (32) expression -> . MINUS expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . BOOLEAN
    (36) expression -> . NULL
    (37) expression -> . STRING
    (38) expression -> . IDENTIFIER

    MINUS           shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    BOOLEAN         shift and go to state 24
    NULL            shift and go to state 25
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 30

state 19

    (13) print_stmt -> PRINT LPAREN . expression RPAREN
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NEQ expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GEQ expression
    (32) expression -> . MINUS expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . BOOLEAN
    (36) expression -> . NULL
    (37) expression -> . STRING
    (38) expression -> . IDENTIFIER

    MINUS           shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    BOOLEAN         shift and go to state 24
    NULL            shift and go to state 25
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 31

state 20

    (14) if_stmt -> IF expression . BLOCK_START statement_list_opt BLOCK_END elif_list else_part
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . TIMES expression
    (25) expression -> expression . DIVIDE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NEQ expression
    (28) expression -> expression . LT expression
    (29) expression -> expression . LEQ expression
    (30) expression -> expression . GT expression
    (31) expression -> expression . GEQ expression

    BLOCK_START     shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    EQ              shift and go to state 37
    NEQ             shift and go to state 38
    LT              shift and go to state 39
    LEQ             shift and go to state 40
    GT              shift and go to state 41
    GEQ             shift and go to state 42


state 21

    (32) expression -> MINUS . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NEQ expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GEQ expression
    (32) expression -> . MINUS expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . BOOLEAN
    (36) expression -> . NULL
    (37) expression -> . STRING
    (38) expression -> . IDENTIFIER

    MINUS           shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    BOOLEAN         shift and go to state 24
    NULL            shift and go to state 25
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 43

state 22

    (33) expression -> LPAREN . expression RPAREN
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NEQ expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression LEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GEQ expression
    (32) expression -> . MINUS expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . BOOLEAN
    (36) expression -> . NULL
    (37) expression -> . STRING
    (38) expression -> . IDENTIFIER

    MINUS           shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 23
    BOOLEAN         shift and go to state 24
    NULL            shift and go to state 25
    STRING          shift and go to state 26
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 44

state 23

    (34) expression -> NUMBER .

    BLOCK_START     reduce using rule 34 (expression -> NUMBER .)
    PLUS            reduce using rule 34 (expression -> NUMBER .)
    MINUS           reduce using rule 34 (expression -> NUMBER .)
    TIMES           reduce using rule 34 (expression -> NUMBER .)
    DIVIDE          reduce using rule 34 (expression -> NUMBER .)
    EQ              reduce using rule 34 (expression -> NUMBER .)
    NEQ             reduce using rule 34 (expression -> NUMBER .)
    LT              reduce using rule 34 (expression -> NUMBER .)
    LEQ             reduce using rule 34 (expression -> NUMBER .)
    GT              reduce using rule 34 (expression -> NUMBER .)
    GEQ             reduce using rule 34 (expression -> NUMBER .)
    COMMENT         reduce using rule 34 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 34 (expression -> NUMBER .)
    PRINT           reduce using rule 34 (expression -> NUMBER .)
    IF              reduce using rule 34 (expression -> NUMBER .)
    WHILE           reduce using rule 34 (expression -> NUMBER .)
    FOR             reduce using rule 34 (expression -> NUMBER .)
    $end            reduce using rule 34 (expression -> NUMBER .)
    BLOCK_END       reduce using rule 34 (expression -> NUMBER .)
    RPAREN          reduce using rule 34 (expression -> NUMBER .)


state 24

    (35) expression -> BOOLEAN .

    BLOCK_START     reduce using rule 35 (expression -> BOOLEAN .)
    PLUS            reduce using rule 35 (expression -> BOOLEAN .)
    MINUS           reduce using rule 35 (expression -> BOOLEAN .)
    TIMES           reduce using rule 35 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 35 (expression -> BOOLEAN .)
    EQ              reduce using rule 35 (expression -> BOOLEAN .)
    NEQ             reduce using rule 35 (expression -> BOOLEAN .)
    LT              reduce using rule 35 (expression -> BOOLEAN .)
    LEQ             reduce using rule 35 (expression -> BOOLEAN .)
    GT              reduce using rule 35 (expression -> BOOLEAN .)
    GEQ             reduce using rule 35 (expression -> BOOLEAN .)
    COMMENT         reduce using rule 35 (expression -> BOOLEAN .)
    IDENTIFIER      reduce using rule 35 (expression -> BOOLEAN .)
    PRINT           reduce using rule 35 (expression -> BOOLEAN .)
    IF              reduce using rule 35 (expression -> BOOLEAN .)
    WHILE           reduce using rule 35 (expression -> BOOLEAN .)
    FOR             reduce using rule 35 (expression -> BOOLEAN .)
    $end            reduce using rule 35 (expression -> BOOLEAN .)
    BLOCK_END       reduce using rule 35 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 35 (expression -> BOOLEAN .)


state 25

    (36) expression -> NULL .

    BLOCK_START     reduce using rule 36 (expression -> NULL .)
    PLUS            reduce using rule 36 (expression -> NULL .)
    MINUS           reduce using rule 36 (expression -> NULL .)
    TIMES           reduce using rule 36 (expression -> NULL .)
    DIVIDE          reduce using rule 36 (expression -> NULL .)
    EQ              reduce using rule 36 (expression -> NULL .)
    NEQ             reduce using rule 36 (expression -> NULL .)
    LT              reduce using rule 36 (expression -> NULL .)
    LEQ             reduce using rule 36 (expression -> NULL .)
    GT              reduce using rule 36 (expression -> NULL .)
    GEQ             reduce using rule 36 (expression -> NULL .)
    COMMENT         reduce using rule 36 (expression -> NULL .)
    IDENTIFIER      reduce using rule 36 (expression -> NULL .)
    PRINT           reduce using rule 36 (expression -> NULL .)
    IF              reduce using rule 36 (expression -> NULL .)
    WHILE           reduce using rule 36 (expression -> NULL .)
    FOR             reduce using rule 36 (expression -> NULL .)
    $end            reduce using rule 36 (expression -> NULL .)
    BLOCK_END       reduce using rule 36 (expression -> NULL .)
    RPAREN          reduce using rule 36 (expression -> NULL .)


state 26

    (37) expression -> STRING .

    BLOCK_START     reduce using rule 37 (expression -> STRING .)
    PLUS            reduce using rule 37 (expression -> STRING .)
    MINUS           reduce using rule 37 (expression -> STRING .)
    TIMES           reduce using rule 37 (expression -> STRING .)
    DIVIDE          reduce using rule 37 (expression -> STRING .)
    EQ              reduce using rule 37 (expression -> STRING .)
    NEQ             reduce using rule 37 (expression -> STRING .)
    LT              reduce using rule 37 (expression -> STRING .)
    LEQ             reduce using rule 37 (expression -> STRING .)
    GT              reduce using rule 37 (expression -> STRING .)
    GEQ             reduce using rule 37 (expression -> STRING .)
    COMMENT         reduce using rule 37 (expression -> STRING .)
    IDENTIFIER      reduce using rule 37 (expression -> STRING .)
    PRINT           reduce using rule 37 (expression -> STRING .)
    IF              reduce using rule 37 (expression -> STRING .)
    WHILE           reduce using rule 37 (expression -> STRING .)
    FOR             reduce using rule 37 (expression -> STRING .)
    $end            reduce using rule 37 (expression -> STRING .)
    BLOCK_END       reduce using rule 37 (expression -> STRING .)
    RPAREN          reduce using rule 37 (expression -> STRING .)


state 27

    (38) expression -> IDENTIFIER .

    BLOCK_START     reduce using rule 38 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 38 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 38 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 38 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 38 (expression -> IDENTIFIER .)
    EQ              reduce using rule 38 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 38 (expression -> IDENTIFIER .)
    LT              reduce using rule 38 (expression -> IDENTIFIER .)
    LEQ             reduce using rule 38 (expression -> IDENTIFIER .)
    GT              reduce using rule 38 (expression -> IDENTIFIER .)
    GEQ             reduce using rule 38 (expression -> IDENTIFIER .)
    COMMENT         reduce using rule 38 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 38 (expression -> IDENTIFIER .)
    PRINT           reduce using rule 38 (expression -> IDENTIFIER .)
    IF              reduce using rule 38 (expression -> IDENTIFIER .)
    WHILE           reduce using rule 38 (expression -> IDENTIFIER .)
    FOR             reduce using rule 38 (expression -> IDENTIFIER .)
    $end            reduce using rule 38 (expression -> IDENTIFIER .)
    BLOCK_END       reduce using rule 38 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 38 (expression -> IDENTIFIER .)


state 28

    (20) while_stmt -> WHILE expression . BLOCK_START statement_list_opt BLOCK_END
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . TIMES expression
    (25) expression -> expression . DIVIDE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NEQ expression
    (28) expression -> expression . LT expression
    (29) expression -> expression . LEQ expression
    (30) expression -> expression . GT expression
    (31) expression -> expression . GEQ expression

    BLOCK_START     shift and go to state 45
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    EQ              shift and go to state 37
    NEQ             shift and go to state 38
    LT              shift and go to state 39
    LEQ             shift and go to state 40
    GT              shift and go to state 41
    GEQ             shift and go to state 42


state 29
